fixed issue with wrong size 'links' title above hamburger on aboutme page

--- a/css/aboutmepage_custom.scss
+++ b/css/aboutmepage_custom.scss
@@ -4,9 +4,8 @@
 
 @import "variables";
 
-h2 {
+h2.bold {
   font-size: 2em;
-  font-weight: bold;
 }
 
 #tag-and-portrait-container {
